--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
             <h1 class="ms-3">ASquared Consulting</h1>
         </div>
         <div>
-            <a href="mailto:valerie@a2consulting.io" >Contactez-moi</a>
+            <a class="contact-btn" href="mailto:valerie@a2consulting.io" >Contactez-moi</a>
         </div>
     </nav>
 </header>
