header without bootstrap done

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header class="container-fluid">
-    <nav class="container d-flex justify-content-between align-items-center">
-        <div class="d-flex">
+<header>
+    <nav class="container">
+        <div class="header-brand">
             <div>
                 <img src="/images/logo/Logo-site.png" class="img-fluid" alt="ASquared Consulting logo">
             </div>
