--- a/css/style.css
+++ b/css/style.css
@@ -17,25 +17,39 @@ a{
     text-decoration: none;
 }
 
+.container{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 /* Includes */
 header{
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px;
-    height: 80px;
+    height: 65px;
 }
 
 header nav{
     height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-brand{
+    display: flex;
+    align-items: center;
 }
 
 header h1{
-    font-size: 2em;
+    font-size: 1.9em;
     font-weight: 700;
+    margin-left: 20px;
 }
 
 header .contact-btn{
     font-weight: 700;
-    padding: 12px 20px;
+    padding: 10px 18px;
     border: 2px solid black;
     border-radius: 30px;
 }
