first section "intro"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,11 @@
 <footer>
-
+    <div class="container">
+        <div>
+            <p>LK share</p>
+        </div>
+        <div>
+            <p>Copyright © 2021 ASquared Consulting • Toulouse, France</p>
+            <p><a href="/cgu.html">Conditions d'utilisation</a></p>
+        </div>
+    </div>
 </footer>
