--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <header>
     <nav class="container">
-        <div class="header-brand">
+        <a href="/index.html" class="header-brand">
             <div>
                 <img src="/images/logo/Logo-site.png" class="img-fluid" alt="ASquared Consulting logo">
             </div>
             <h1 class="ms-3">ASquared Consulting</h1>
-        </div>
+        </a>
         <div>
-            <a class="contact-btn" href="mailto:valerie@a2consulting.io" >Contactez-moi</a>
+            <a class="btn" href="mailto:valerie@a2consulting.io" >Contactez-moi</a>
         </div>
     </nav>
 </header>
