--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ a{
     margin: 0 auto;
 }
 
+.btn{
+    font-weight: 700;
+    padding: 10px 18px;
+    border: 2px solid black;
+    border-radius: 30px;
+}
+
 /* Includes */
 header{
     background-color: white;
@@ -47,13 +54,54 @@ header h1{
     margin-left: 20px;
 }
 
-header .contact-btn{
-    font-weight: 700;
-    padding: 10px 18px;
-    border: 2px solid black;
-    border-radius: 30px;
+
+
+footer{
+    background-color: rgb(222, 222, 222);
+    padding: 20px 0;
 }
 
+footer div.container{
+    display: flex;
+    justify-content: space-between;
+}
 /* HomePage */
+section.intro > img{
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 65px);
+    object-fit: cover;
+}
 
-/* PostPage */
+.intro-content{
+    position: absolute;
+    top: 50%;
+    left: calc((100vw - 1000px)/2);
+    transform: translateY(-50%);
+    width: 100%;
+    max-width: 1000px;
+}
+
+.intro-content > h2{
+    font-size: 3em;
+    font-weight: 700;
+    line-height: 1.3em;
+    margin-bottom: 80px;
+}
+.intro-content > .btn{
+    font-size: 1.2em;
+    padding: 25px 40px;
+    border-radius: 50px;
+}
+
+
+    /* PostPage */
+
+/* CGU */
+.cgu{
+    height: 75vh;
+    padding-top: 50px;
+}
+
+
+/* todo media max width 1050px*/
