--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ h1, h2, h3, h4{
 
 .condensed-text{
     font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 100;
+}
+
+.roboto-text{
+    font-family: 'Roboto', sans-serif;
 }
 
 a{
@@ -54,7 +59,9 @@ header h1{
     margin-left: 20px;
 }
 
-
+section{
+    padding: 80px 0;
+}
 
 footer{
     background-color: rgb(222, 222, 222);
@@ -65,8 +72,14 @@ footer div.container{
     display: flex;
     justify-content: space-between;
 }
-/* HomePage */
-section.intro > img{
+
+/* -------------------------- HomePage ------------------ */
+/* Section Intro */
+#intro{
+    padding: 0;
+}
+
+#intro > img{
     position: relative;
     width: 100%;
     height: calc(100vh - 65px);
@@ -85,19 +98,147 @@ section.intro > img{
 .intro-content > h2{
     font-size: 3em;
     font-weight: 700;
-    line-height: 1.3em;
-    margin-bottom: 80px;
+    line-height: 1.4em;
+    margin-bottom: 100px;
 }
 .intro-content > .btn{
     font-size: 1.2em;
     padding: 25px 40px;
     border-radius: 50px;
 }
+/* Section Needs */
+#needs{
+    color: #4f4646;
+}
+
+#needs > h2{
+    font-weight: 400;
+    font-size: 1.7em;
+}
+
+#needs > h3{
+    font-weight: 400;
+    font-size: 1.5em;
+    margin: 20px 0 40px;
+}
+
+.needs_items{
+    display: flex;
+    justify-content: space-between;
+}
+
+.needs_items > p{
+    font-size: 1.2em;
+    padding: 20px;
+    border: 2px solid rgba(0,0,0,.1);
+    width: 28%;
+    line-height: 1.4em;
+}
+
+/* Section Solutions */
+#solutions{
+    background-color: #ebe8e4;
+}
+
+#solutions .container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.solutions_item{
+    width: 22%;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.solutions_item strong{
+    font-weight: 900;
+}
+
+.solutions_item > img{
+    display: block;
+    margin: 25px auto 0;
+}
+
+/* Section Experiment & Simplify*/
+.steps{
+    display: flex;
+}
+
+/* Section Experiment */
+#experiment{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: white;
+    /* background-color: rgb(232, 234, 236); */
+    background-position: 50% 50%;
+    background-image: url("/images/landing-page/iStock-1174382839-compressed.jpg");
+}
+
+/* Section Simplify */
+#simplify{
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: rgb(232, 234, 236);
+    background-position: 50% 50%;
+    background-image: url("/images/landing-page/iStock-693318106.jpg");
+}
+
+/* Section Bio */
+#bio{
+    background-color: #ebe8e4;
+}
+
+#bio .container{
+    display: flex;
+    height: 400px;
+}
+
+#bio .container > div:first-child{
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 30px;
+}
+
+#bio .container > div:last-child{
+    flex: 1;
+}
+
+#bio .container > div:last-child img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Section collaborations */
+#collaborations .collaboration{
+    display: flex;
+}
+
+/* Section exchanges */
+#exchanges{
+    background-color: #ebe8e4;
+}
+
+#exchanges .contact_links{
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    min-width: 300px;
+    margin: auto;
+}
+
+/* Section Posts todo */
 
 
-    /* PostPage */
 
-/* CGU */
+
+
+/* ------------------------------------------ PostPage ---------------------------------------------- */
+
+/* ------------------------------------------- CGU -------------------------------------------------- */
 .cgu{
     height: 75vh;
     padding-top: 50px;
