--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <div class="container">
-        <div>
-            <p>LK share</p>
-        </div>
+        <a href="#" class="linkedin-sharelink">
+            <img src="/images/landing-page/linkedin-share.png">
+        </a>
         <div>
             <p>Copyright © 2021 ASquared Consulting • Toulouse, France</p>
             <p><a href="/cgu.html">Conditions d'utilisation</a></p>
