--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body{
     font-size: 16px;
     font-family: 'Raleway', helvetica, sans-serif;
     margin: 0;
+    color: rgb(34, 34, 34);
 }
 
 h1, h2, h3, h4{
@@ -73,6 +74,18 @@ footer div.container{
     justify-content: space-between;
 }
 
+footer .linkedin-sharelink{
+    display: flex;
+    align-items: center
+}
+
+footer .linkedin-sharelink img{
+    display: block;
+    width: 70px;
+    border-radius: 3px;
+    border: 1px solid #0074b3;
+}
+
 /* -------------------------- HomePage ------------------ */
 /* Section Intro */
 #intro{
@@ -109,6 +122,7 @@ footer div.container{
 /* Section Needs */
 #needs{
     color: #4f4646;
+    background-color: white;
 }
 
 #needs > h2{
@@ -163,26 +177,60 @@ footer div.container{
 /* Section Experiment & Simplify*/
 .steps{
     display: flex;
+    justify-content: space-around;
+}
+
+.steps > div{
+    flex: 1;
+}
+
+#experiment, #simplify{
+    color: white;
 }
 
 /* Section Experiment */
 #experiment{
-    background-repeat: no-repeat;
+    position: relative;
+    background: rgba(105,103,101,0.35)
+}
+
+#experiment::before {
+    content: "";
+    background-image: url('/images/landing-page/iStock-1174382839-compressed.jpg');
     background-size: cover;
-    background-color: white;
-    /* background-color: rgb(232, 234, 236); */
-    background-position: 50% 50%;
-    background-image: url("/images/landing-page/iStock-1174382839-compressed.jpg");
+    background-position: left center;
+    position: absolute;
+    width: 100vw;
+    top: 0;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.7;
+    z-index: -1;
 }
 
 /* Section Simplify */
 #simplify{
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-color: rgb(232, 234, 236);
-    background-position: 50% 50%;
-    background-image: url("/images/landing-page/iStock-693318106.jpg");
+    position: relative;
+    background: rgba(105,103,101,0.35);
 }
+
+#simplify::before {
+    content: "";
+    background-image: url('/images/landing-page/iStock-693318106.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -2;
+    height: 100%;
+    width: 100%;
+}
+
 
 /* Section Bio */
 #bio{
@@ -213,23 +261,65 @@ footer div.container{
 }
 
 /* Section collaborations */
+#collaborations h2{
+    font-size: 2.8em;
+    font-weight: 100;
+}
+
 #collaborations .collaboration{
     display: flex;
+    min-height: 300px;
+    margin-top: 30px;
+}
+
+.collaboration-img{
+    width: 60%;
+    text-align: center;
+}
+
+.collaboration-text{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.collaboration-text h3{
+    font-size: 1.4em;
+    font-weight: 700;
+}
+
+.collaboration-text h4{
+    font-size: 1.2em;
+    font-weight: 100;
+    margin: 5px 0;
+}
+
+.collaboration-text p{
+    font-size: 1em;
+    font-weight: 100;
+    line-height: 1.5em;
+    margin: 0;
 }
 
 /* Section exchanges */
 #exchanges{
     background-color: #ebe8e4;
+    font-size: 1.2em;
 }
 
 #exchanges .contact_links{
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    width: 55%;
     min-width: 300px;
-    margin: auto;
+    margin: 40px auto 10px;
 }
 
+#exchanges h2, #posts h2{
+    font-size: 2.2em;
+    font-weight: 100;
+}
 /* Section Posts todo */
 
 
