--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     font-size: 16px;
     font-family: 'Raleway', helvetica, sans-serif;
@@ -125,15 +129,16 @@ footer .linkedin-sharelink img{
     background-color: white;
 }
 
-#needs > h2{
+#needs h2{
     font-weight: 400;
-    font-size: 1.7em;
+    font-size: 1.8em;
+    margin-bottom: 10px;
 }
 
-#needs > h3{
-    font-weight: 400;
+#needs h3{
+    font-weight: 100;
     font-size: 1.5em;
-    margin: 20px 0 40px;
+    margin: 20px 0 50px;
 }
 
 .needs_items{
@@ -176,16 +181,66 @@ footer .linkedin-sharelink img{
 
 /* Section Experiment & Simplify*/
 .steps{
+    margin-top: 100px;
+    margin-bottom: 10px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .steps > div{
-    flex: 1;
+    width: 25%;
+    padding: 0 20px;
+    text-align: center;
+    line-height: 1.63;
+    letter-spacing: .4px;
+}
+
+.steps .square_box{
+    position: relative;
+}
+
+.steps .square_box .square_linker{
+    position: absolute;
+    top: 27px;
+    left: calc(50% - -52px);
+    width: calc(100% - 82px);
+    height: 1px;
+    border-right: 0;
+    border-top: 1px solid #d6d6d5;
 }
 
 #experiment, #simplify{
     color: white;
+}
+
+.steps .condensed-text{
+    font-size: 1.1em;
+}
+
+.steps p{
+    margin: 0;
+}
+
+#experiment h2, #simplify h2{
+    font-size: 2.2em;
+    font-weight: 400;
+}
+
+#experiment .container > p, #simplify .container > p{
+    font-size: 1.2em;
+    font-weight: 400;
+}
+
+.steps .square {
+    border: 1px solid white;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.4em;
+    font-weight: 700;
+    margin: 0 auto 10px;
 }
 
 /* Section Experiment */
@@ -202,10 +257,10 @@ footer .linkedin-sharelink img{
     position: absolute;
     width: 100vw;
     top: 0;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    opacity: 0.7;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.9;
     z-index: -1;
 }
 
@@ -225,11 +280,13 @@ footer .linkedin-sharelink img{
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0;
+    left: 60px;
     z-index: -2;
     height: 100%;
     width: 100%;
 }
+
+
 
 
 /* Section Bio */
@@ -248,6 +305,21 @@ footer .linkedin-sharelink img{
     flex-direction: column;
     justify-content: center;
     padding-right: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+}
+
+#bio .container > div:first-child h2{
+    font-size: 1.8em;
+}
+
+#bio .container > div:first-child p{
+    font-size: 0.95em;
+    line-height: 1.5em;
+}
+
+#bio .container > div:first-child strong{
+    font-weight: 700;
 }
 
 #bio .container > div:last-child{
