--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div>
                 <img src="/images/logo/Logo-site.png" class="img-fluid" alt="ASquared Consulting logo">
             </div>
-            <h1 class="ms-3">ASquared Consulting</h1>
+            <h1>ASquared Consulting</h1>
         </a>
         <div>
             <a class="btn" href="mailto:valerie@a2consulting.io" >Contactez-moi</a>
