--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ header{
     width: 100%;
     z-index: 100;
     background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 1px 1px;
     height: 65px;
 }
 
@@ -389,6 +389,14 @@ footer .linkedin-sharelink img{
     width: 55%;
     min-width: 300px;
     margin: 40px auto 10px;
+}
+
+#exchanges .contact_links img{
+    transition: 200ms transform linear;
+}
+
+#exchanges .contact_links img:hover{
+    transform: scale(1.15);
 }
 
 #exchanges h2, #posts h2{
