--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,36 @@ footer .linkedin-sharelink img{
 
 
 /* ------------------------------------------ PostPage ---------------------------------------------- */
+.postHeader{
+    padding-top: 65px;
+    position: relative;
+    width: 100%;
+    height: 300px;
+}
 
+.postHeader > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: bottom;
+}
+
+.postHeader > h2{
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 2.8em;
+    width: 100%;
+    max-width: 1000px;
+}
+
+.postDate{
+    font-size: 14px;
+    color: #a9aeb2;
+    border-bottom: 1px solid #ddd;
+}
 
 /* ------------------------------------------- CGU -------------------------------------------------- */
 .cgu{
