--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
         <h2>{{ page.title }}</h2>
     </div>
 
-    <div class="container">
+    <div class="container roboto-text">
         <div class="postDate">
             <p>{{ page.date | date: "%d / %m / %Y" }}</p>
         </div>
