--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ footer .linkedin-sharelink img{
     background-size: cover;
     background-position: left center;
     position: absolute;
-    width: 100vw;
+    width: 100%;
     top: 0;
     right: 0;
     bottom: 0;
@@ -297,7 +297,7 @@ footer .linkedin-sharelink img{
     left: 60px;
     z-index: -2;
     height: 100%;
-    width: 100%;
+    width: calc(100% - 60px);
 }
 
 
