format post pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
 
     <div class="container roboto-text">
         <div class="postDate">
-            <p>{{ page.date | date: "%d / %m / %Y" }}</p>
+            <p>Posté le {{ page.date | date: "%d / %m / %Y" }}</p>
         </div>
 
         {{ content }}
