--- a/css/style.css
+++ b/css/style.css
@@ -97,18 +97,21 @@ footer .linkedin-sharelink img{
 /* Section Intro */
 #intro{
     padding: 0;
+    width: 100%;
+    height: 100vh;
 }
 
 #intro > img{
     position: relative;
+    top: 65px;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 65px);
     object-fit: cover;
 }
 
 .intro-content{
     position: absolute;
-    top: 47%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
@@ -119,12 +122,12 @@ footer .linkedin-sharelink img{
     font-size: 3em;
     font-weight: 700;
     line-height: 1.4em;
-    margin-bottom: 110px;
+    margin-bottom: 90px;
 }
 
 .intro-content > .btn{
     font-size: 1.2em;
-    padding: 25px 40px;
+    padding: 24px 40px;
     border-radius: 50px;
 }
 
@@ -420,9 +423,14 @@ footer .linkedin-sharelink img{
 
 /* ------------------------------------------ PostPage ---------------------------------------------- */
 .postPage p{
-    font-size: 18px;
+    font-size: 1.1em;
     font-weight: 100;
     line-height: 32px;
+    margin: 5px auto;
+}
+
+.postPage h3{
+    margin-top: 40px;
 }
 
 .postPage .container{
@@ -451,14 +459,50 @@ footer .linkedin-sharelink img{
     color: white;
     font-size: 2.8em;
     width: 100%;
-    max-width: 1000px;
+    max-width: 816px;
 }
 
 .postDate{
-    font-size: 14px;
-    color: #a9aeb2;
     border-bottom: 1px solid #ddd;
+    margin-bottom: 30px;
 }
+
+
+.postDate > p{
+    font-size: 0.9em;
+    color: #a9aeb2;
+}
+
+.postPage a{
+    color: rgb(0, 0, 238);
+}
+
+
+.postPage .container > p:last-of-type{
+    margin-bottom: 50px;
+}
+
+.postPage .postImage{
+    display: block;
+    width: 80%;
+    max-width: 500px;
+    margin: 30px auto;
+}
+
+.postPage .smallPostImage{
+    display: block;
+    width: 80%;
+    max-width: 300px;
+    margin: 30px auto;
+}
+
+.postPage .credits{
+    font-style: italic;
+    margin: 40px auto;
+}
+
+
+
 
 /* ------------------------------------------- CGU -------------------------------------------------- */
 .cgu{
