--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,12 @@ a{
     border-radius: 30px;
 }
 
+.fullWidthImage{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* Includes */
 header{
     position: fixed;
@@ -300,10 +306,10 @@ footer .linkedin-sharelink img{
     top: 0;
     right: 0;
     bottom: 0;
-    left: 60px;
+    left: 80px;
     z-index: -2;
     height: 100%;
-    width: calc(100% - 60px);
+    width: calc(100% - 80px);
 }
 
 
@@ -420,6 +426,7 @@ footer .linkedin-sharelink img{
     font-size: 2.2em;
     font-weight: 100;
 }
+
 /* Section Posts */
 #posts ul{
     list-style-type: none;
@@ -428,17 +435,36 @@ footer .linkedin-sharelink img{
     justify-content: space-between;
 }
 
-#posts article{
-    width: 80%;
-    border: 1px solid lightgrey;
-    border-radius: 20px;
-    padding: 20px;
+#posts li{
+    flex: 1;
 }
 
-#post .postBtn{
+#posts li:hover img{
+    scale: 110%;
+    object-position: center;
+}
+
+#posts li div{
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+
+#posts article{
+    width: 90%;
+    margin: auto;
+}
+
+#posts article p{
+    margin: 0;
+    font-size: 0.9em;
+    color: #a9aeb2;
+}
+
+#posts .postBtn{
     text-align: center;
     display: block;
-    margin: auto;
+    margin: 40px auto;
     width: 200px;
 }
 
