update post-list page template and set style

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@
 
         {{ content }}
     </div>
+    <a href="/post-list.html" class="postBtn btn">Retour aux articles</a>
 </main>
 
 {% include footer.html %}
