styling post-list page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,8 +19,11 @@
         </div>
 
         {{ content }}
+
+        <div class="btnBloc">
+            <a href="/post-list.html" class="postBtn btn">Retour aux articles</a>
+        </div>
     </div>
-    <a href="/post-list.html" class="postBtn btn">Retour aux articles</a>
 </main>
 
 {% include footer.html %}
