--- a/css/style.css
+++ b/css/style.css
@@ -497,7 +497,7 @@ footer .linkedin-sharelink img{
     border-radius: 5px;
     box-shadow: 0 2px 5px -1px rgba(0,0,0,.15),0 0 1px rgba(0,0,0,.09);
     margin: 40px auto;
-    height: 230px;
+    height: 210px;
     color: #4d4d4d;
 }
 
@@ -506,11 +506,22 @@ footer .linkedin-sharelink img{
 }
 
 .postListPage__articleDescription{
-    padding: 15px;
+    padding: 15px 20px 15px 15px;
     width: 67%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    line-height: 1.5em;
+}
+
+.postListPage__articleDescription p{
+    margin: 0;
+    font-size: 0.9em;
+    height: 100px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow-y: hidden;
 }
 
 .postDateWithClock{
@@ -744,12 +755,20 @@ footer .linkedin-sharelink img{
         max-width: 350px;
     }
 
-
     .collaboration-text{
         width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+
+    #posts ul{
+        flex-direction: column;
+    }
+
+    #posts ul li{
+        width: 90%;
+        margin: 15px auto;
     }
 
     header .btn, header h1{
@@ -769,6 +788,50 @@ footer .linkedin-sharelink img{
     footer .linkedin-sharelink{
         justify-content: center;
     }
+
+    /* Page post-list */
+    .postListPage{
+        padding-top: calc(65px + 40px);
+        width: 90%;
+        margin: 0 auto 60px;
+    }
+
+    .postListPage article{
+        flex-direction: column-reverse;
+        height: auto;
+        color: #4d4d4d;
+    }
+
+    .postListPage__articleDescription{
+        padding: 15px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .postListPage__articleDescription p{
+        height: auto;
+    }
+
+    .postDateWithClock{
+        margin-top: 10px;
+    }
+
+    .postListPage__articleImage{
+        max-width: 700px;
+        width: 100%;
+        max-height: 300px;
+    }
+
+    .postListPage__articleImage img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+
+        .btnBloc{
+            text-align: center;
+        }
 }
 
 @media screen and (max-width: 500px){
