--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container">
-        <a href="#" class="linkedin-sharelink">
-            <img src="/images/landing-page/linkedin-share.png">
+        <a href="https://www.linkedin.com/company/a2consulting/about/" class="linkedin-sharelink">
+            <img src="/images/landing-page/linkedin-logo.png">
         </a>
         <div>
             <p>Copyright © 2021 ASquared Consulting • Toulouse, France</p>
