--- a/_includes/head-posts.html
+++ b/_includes/head-posts.html
@@ -7,9 +7,6 @@
 
     <link rel="shortcut icon" href="/images/logo/Logo-site-favicon.png">
 
-    <!-- Bootstrap CSS -->
-   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">-->
-
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto+Condensed:wght@300;400;700;900&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -17,6 +14,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!-- Bootstrap JS -->
-   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>-->
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:url" content="{{ page.url }}" />
+    <meta property="og:image" content="{{ page.header-image }}" />
+    <meta property="og:type" content="article" />
+
 </head>
