--- a/_includes/head-posts.html
+++ b/_includes/head-posts.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/style.css">
 
     <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:description" content="{{ page.excerpt }}" />
     <meta property="og:url" content="{{ page.url }}" />
     <meta property="og:image" content="{{ page.header-image }}" />
     <meta property="og:type" content="article" />
