--- a/_includes/head-posts.html
+++ b/_includes/head-posts.html
@@ -18,6 +18,8 @@
     <meta property="og:description" content="{{ page.excerpt }}" />
     <meta property="og:url" content="{{ page.url }}" />
     <meta property="og:image" content="{{ page.header-image }}" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:type" content="article" />
 
 </head>
