--- a/css/style.css
+++ b/css/style.css
@@ -93,15 +93,13 @@ footer div.container{
 
 footer .linkedin-sharelink{
     display: flex;
-    align-items: center
+    align-items: center;
 }
 
 footer .linkedin-sharelink img{
     display: block;
     width: 70px;
-}
-
-.linkedin-sharelink.postshare{
+    min-height: 20px;
     border: 1px solid #0074b3;
     border-radius: 3px;
 }
