--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,11 @@
             <img src="/images/landing-page/linkedin-logo.png">
         </a>
         {% endif %}
+
+        <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}" class="linkedin-sharelink">
+            <img src="/images/landing-page/linkedin-share.png" alt="lien de partage linkedin" >
+        </a>
+
         <div>
             <p>Copyright © 2021 ASquared Consulting • Toulouse, France</p>
             <p><a href="/cgu.html">Conditions d'utilisation</a></p>
