--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,11 @@ a{
     border-radius: 30px;
 }
 
+.btn-black{
+    color: white;
+    background-color: black;
+}
+
 .fullWidthImage{
     width: 100%;
     height: 100%;
