--- a/css/style.css
+++ b/css/style.css
@@ -327,16 +327,37 @@ footer .linkedin-sharelink img{
     margin-bottom: 20px;
 }
 
+#formation i{
+    font-size: 3.5em;
+    margin: 10px;
+}
+
 #formation .container > div {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
+    gap: 50px;
 }
 
 #formation article{
+    border: 1px solid #4d4d4d;
     background-color: #ebe8e4;
-    padding: 40px 20px;
+    padding: 30px 30px 50px;
     text-align: center;
+}
+
+#formation article.formation_message{
+    grid-column: 2/4;
+    border: none;
+    background: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#formation .la-ellipsis-h{
+    margin: 0;
+    margin-top: -10px;
+    color: #4d4d4d;
 }
 
 #formation article p.time{
