--- a/css/style.css
+++ b/css/style.css
@@ -321,48 +321,68 @@ footer .linkedin-sharelink img{
 
 
 /* Section formation */
+#formation{
+    position: relative;
+}
+
+#formation::before {
+    content: "";
+    background-image: url('/images/landing-page/istockphoto-formation.jpg');
+    background-size: cover;
+    background-position: center right;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.9;
+    z-index: -1;
+}
+
 #formation h2{
     font-size: 2.2em;
     font-weight: 100;
     margin-bottom: 20px;
-}
-
-#formation i{
-    font-size: 3.5em;
-    margin: 10px;
+    color: white;
 }
 
 #formation .container > div {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 50px;
+    margin: auto 30px;
+}
+
+#formation h3.condensed-text{
+    font-weight: bold;
 }
 
 #formation article{
     border: 1px solid #4d4d4d;
-    background-color: #ebe8e4;
-    padding: 30px 30px 50px;
+    background-color: white;
+    padding: 40px 30px;
     text-align: center;
-}
-
-#formation article.formation_message{
-    grid-column: 2/4;
-    border: none;
-    background: none;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
-#formation .la-ellipsis-h{
-    margin: 0;
-    margin-top: -10px;
+#formation article.coming-soon{
     color: #4d4d4d;
 }
 
+#formation article p{
+    margin: 0;
+}
+
+#formation article div{
+    margin: 30px auto;
+}
+
 #formation article p.time{
-    margin: 20px auto 30px;
-    font-size: 1.2em;
+    margin: 20px auto 0;
+    font-size: 1.5em;
 }
 
 
