--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,8 +12,10 @@
 
 
     <!-- Fonts -->
+<!--    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Allura?family=Raleway:wght@400;700;900&family=Roboto+Condensed:wght@300;400;700;900&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto+Condensed:wght@300;400;700;900&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Raleway:wght@400;700;900&family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/style.css">
